# VulkanGame

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  Vulkan Game Demo GDD.docx  VulkanGame.sln  VulkanGame.vcxproj  VulkanGameDemo.workspace  VulkanGame_Exe.vcxproj  cmake-build.sh  cmake-clean.sh  cmake-rebuild.sh  cmake.sh  deps.sh  est.project
.codelite/: VulkanGameDemo-mario.tags-shm  VulkanGameDemo-mario.tags-wal  VulkanGameDemo.session
dev/: Linux Mint Install Notes.md
ext/: FindGLM.cmake  FindSDL2.cmake  FindSDL2_net.cmake  FindVulkan.cmake  README.md
ext/lua-5.4.0/: CMakeLists.txt  lua-5.4.0.vcxproj
project/: Linux Mint Install Notes.md  devlog.md  notes.md
project/Platinum/: GDD.md  GDD.odt  Roadmap.md  Technical Design.md
project/smw_sprites/: notes.md
src/: BaseHeader.h  CMakeLists.txt  Gu.cpp  Gu.h  PACKAGE.vcxproj  SDLVulkan.cpp  SDLVulkan.h  cmake_install.cmake  main.cpp
src/app/: SDL.cpp  SDL.h
src/base/: Allocator.h  App.cpp  App.h  AppRunner.cpp  AppRunner.h  ApplicationPackage.cpp  ApplicationPackage.h  Base.cpp  Base.h  BaseDefines.h  BaseHeader.h  BinaryFile.cpp  BinaryFile.h  BuildConfig.h  CSharp.h  ColoredConsole.cpp  ColoredConsole.h  ConsoleColors.h  Crc32.cpp  Crc32.h  DateTime.cpp  DateTime.h  DebugHelper.cpp  DebugHelper.h  Delta.cpp  Delta.h  DiskFile.cpp  DiskFile.h  DynamicBuffer.h  EngineConfig.cpp  EngineConfig.h  EngineConfigFile.cpp  EngineConfigFile.h  Exception.cpp  Exception.h  FileSystem.cpp  FileSystem.h  FpsMeter.cpp  FpsMeter.h  FrameSync.cpp  (+94 more)
src/bottle/: BlockNode.cpp  BlockNode.h  BottleHeader.h  BottleScript.cpp  BottleScript.h  BottleUtils.cpp  BottleUtils.h  Brain25.cpp  Brain25.h  GameFile.cpp  GameFile.h  GameUi.cpp  GameUi.h  Goal25.cpp  Goal25.h  Goal25MoveTo.cpp  Goal25MoveTo.h  Goal25Think.cpp  Goal25Think.h  Lair.cpp  Lair.h  ObFile.cpp  ObFile.h  RTSCamScript.cpp  RTSCamScript.h  SpriteBucket.cpp  SpriteBucket.h  Tile25Spec.cpp  Tile25Spec.h  W25Config.cpp  W25Config.h  W25GridMesh.cpp  W25GridMesh.h  W25MeshMaker.cpp  W25MeshMaker.h  WalkerSpec.cpp  WalkerSpec.h  WipGrid.cpp  WipGrid.h  World25.cpp  (+17 more)
src/cmake_test_src/: cmake_test.cpp
src/core/: AppRunner.cpp  Component.cpp  Component.h  Core.cpp  Core.h  CoreHeader.h  GraphicsApi.cpp  GraphicsDriver.cpp  GraphicsDriver.h  LuaScript.cpp  LuaScript.h  Main.cpp  OglErr.cpp  SDLApp.cpp  SDLApp.h  SDLUtils.cpp  SDLUtils.h  Script.h  SoundCache.cpp  SoundCache.h
src/ext/: lodepng.cpp  stb_truetype.h
src/gfx/: Atlas.cpp  Atlas.h  BufferRenderTarget.cpp  BufferRenderTarget.h  CameraNode.cpp  CameraNode.h  DeferredFramebuffer.cpp  DeferredFramebuffer.h  FontTextBuffer.cpp  FontTextBuffer.h  ForwardFramebuffer.cpp  ForwardFramebuffer.h  FramebufferBase.cpp  FramebufferBase.h  FreeCameraScript.cpp  FrustumBase.cpp  FrustumBase.h  FrustumProjectionParameters.h  GLObject.h  GfxHeader.h  GpuComputeSync.cpp  GpuComputeSync.h  GpuQuad3.cpp  GpuQuad3.h  GraphicsApi.cpp  GraphicsApi.h  GraphicsContext.cpp  GraphicsContext.h  HappySky.cpp  HappySky.h  LightManager.cpp  LightManager.h  LightNode.cpp  LightNode.h  MegaTex.cpp  MegaTex.h  OpenGLApi.cpp  OpenGLApi.h  OpenGLUtils.cpp  OpenGLUtils.h  (+65 more)
src/global/: Gu.h
src/math/: Algorithm.h  BitHacks.cpp  BitHacks.h  Box2x.h  Box3x.h  BoxUtils.cpp  BoxUtils.h  CollisionEquations.cpp  CollisionEquations.h  ConvexAlgorithms.cpp  ConvexAlgorithms.h  CubicBezierSpline.cpp  CubicBezierSpline.h  Line3.h  Mat3x.h  Mat4x.h  Math.cpp  Math.h  MathAll.h  MathHeader.h  MathUtils.cpp  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.h  Minimax.cpp  Minimax.h  Plane3.cpp  Plane3.h  PlaneEx3.h  ProjectedRay.cpp  ProjectedRay.h  Quad3x.h  QuadPlane.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  RaycastHit.h  Sphere3.h  Spline.cpp  (+6 more)
src/model/: Animation.cpp  Animation.h  FragmentBufferData.cpp  FragmentBufferData.h  GpuBufferData.cpp  GpuBufferData.h  HierarchyString.h  IboData.cpp  IboData.h  IndexBufferData.cpp  IndexBufferData.h  Material.cpp  Material.h  MbiFile.cpp  MbiFile.h  MeshData.cpp  MeshData.h  MeshNode.cpp  MeshNode.h  MeshSpec.cpp  MeshSpec.h  MeshUtils.cpp  MeshUtils.h  MobFile.cpp  MobFile.h  Model.cpp  Model.h  ModelCache.cpp  ModelCache.h  ModelHeader.h  ModelThumb.cpp  ModelThumb.h  OBB.cpp  OBB.h  SceneNode.cpp  SceneNode.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  TextBufferMesh.cpp  TextBufferMesh.h  (+24 more)
src/system/: AppRunner.cpp  AppRunner.h
src/ui/: Gui2d.cpp  Gui2d.h  UIHeader.cpp  UIHeader.h  UIImage.cpp  UIImage.h  UILabel.cpp  UILabel.h
src/world/: BaseCollider.cpp  BaseCollider.h  CSharpScript.cpp  CSharpScript.h  Manifold.cpp  Manifold.h  NodeData.cpp  NodeData.h  NodeDataManager.cpp  NodeDataManager.h  NodeUtils.cpp  NodeUtils.h  Path.cpp  Path.h  PhysicsGrid.cpp  PhysicsGrid.h  PhysicsGridAwareness.cpp  PhysicsGridAwareness.h  PhysicsNode.cpp  PhysicsNode.h  PhysicsShapes.cpp  PhysicsShapes.h  PhysicsWorld.cpp  PhysicsWorld.h  RenderBucket.cpp  RenderBucket.h  Scene.cpp  Scene.h  Script.cpp  Script.h  WorldHeader.h
src_stage/base/: AppRunner.cpp  AppRunner.h  CSharp.h  Crc32.cpp  Crc32.h  DateTime.cpp  Delta.cpp  Delta.h  DiskFile.cpp  DiskFile.h  DynamicBuffer.h  FpsMeter.cpp  FpsMeter.h  FrameSync.cpp  FrameSync.h  GLContext.cpp  GLContext.h  GamePad.cpp  GamePad.h  GraphicsApi.cpp  GraphicsApi.h  GraphicsContext.cpp  GraphicsWindow.cpp  GraphicsWindow.h  GrowBuffer.h  Gu.cpp  Gu.h  HeaderTest.cpp  Img32.cpp  InputManager.cpp  InputManager.h  LuaIncludes.h  LuaScript.cpp  LuaScript.h  Main.cpp  Net.cpp  Net.h  ObjFile.cpp  ObjFile.h  OglErr.cpp  (+33 more)
src_stage/bottle/: BlockNode.cpp  BlockNode.h  BottleHeader.h  BottleScript.cpp  BottleScript.h  BottleUtils.cpp  BottleUtils.h  Brain25.cpp  Brain25.h  GameFile.cpp  GameFile.h  GameUi.cpp  GameUi.h  Goal25.cpp  Goal25.h  Goal25MoveTo.cpp  Goal25MoveTo.h  Goal25Think.cpp  Goal25Think.h  Lair.cpp  Lair.h  ObFile.cpp  ObFile.h  RTSCamScript.cpp  RTSCamScript.h  SpriteBucket.cpp  SpriteBucket.h  Tile25Spec.cpp  Tile25Spec.h  W25Config.cpp  W25Config.h  W25GridMesh.cpp  W25GridMesh.h  W25MeshMaker.cpp  (+24 more)
utils/sgen/: CMakeLists.txt  sgen.cpp
(+258 files in other folders)
