set(SG_PROJECT_VERSION 1.2.0)
project(sgen VERSION ${SG_PROJECT_VERSION})

add_executable(sgen ${PROJECT_SOURCE_DIR}/sgen.cpp)

get_arch_config()  
 
set(SGEN_OUTPUT_NAME ${PROJECT_NAME}-${PROJECT_VERSION}${ARCH_CONFIG})
message("Output: " ${SGEN_OUTPUT_NAME})

set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${SGEN_OUTPUT_NAME}
  RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VG_BIN_DEBUG_DIR}
  RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VG_BIN_RELEASE_DIR}
  RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${VG_BIN_DEBUG_DIR}
  RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${VG_BIN_DEBUG_DIR}
  ARCHIVE_OUTPUT_DIRECTORY ${VG_LIB_DIR}
)   

set(ADDL_LIBS "")
if(CMAKE_COMPILER_IS_GNUCXX OR MINGW OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
    set(SG_GCC_COMPILE_GLOBAL -DPROJECT_VERSION="${PROJECT_VERSION}") 
    set(SG_GCC_LINK_GLOBAL -pthread) 

    target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:RELEASE>:" ${SG_GCC_COMPILE_GLOBAL} ">")
    target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:DEBUG>:" ${SG_GCC_COMPILE_GLOBAL} -D_DEBUG -D_GLIBCXX_DEBUG ">")

    target_link_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:RELEASE>:" ${SG_GCC_LINK_GLOBAL} ">")
    target_link_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:DEBUG>:" ${SG_GCC_LINK_GLOBAL} ">")

endif()
target_link_libraries(${PROJECT_NAME} PRIVATE ${ADDL_LIBS})

